--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
-  {%- include head.html -%}
-
+<html>
+  <head>
+      <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+  </head>
   <body>
-
-    {%- include header.html -%}
-
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
-
-    {%- include footer.html -%}
-
+     {{ content }}
+    <hr/>
+     {% include footer.html %}
   </body>
-
 </html>
