--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,11 @@
+---
+---
+
 @import url("https://use.typekit.net/crm3llt.css");
 
+img {
+	max-width: 100%;
+}
 body {
 	max-width: 800px;
 	font-size:   13pt;
@@ -60,10 +66,6 @@ h6 {
 
 h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
 	margin: 0;
-}
-
-img {
-	min-width: 100%;
 }
 
 video {
