--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+      <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/normalize.css" />
+      <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" />
   </head>
   <body>
      {{ content }}
