--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,5 @@
-<p>Copyright © 2008 - 2019 Mathscapes Research. All rights reserved unless stated otherwise.</p>
+<p>
+    Copyright © 2008 - 2019 Mathscapes Research. All rights reserved unless stated otherwise.<br/>
+    <a href="{{ site.url }}/about" style="padding-right: 10px;">About</a>
+    <a href="mailto: hello@mathscapes.xyz">Contact</a>
+</p>
