--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,7 +11,7 @@ body {
 	font-size:   13pt;
 	color:       #222;
 	background:  #fff;
-	font-family: proxima-nova, Arial, Helvetica, sans-serif;
+	font-family: neue-haas-grotesk-text, sans-serif;
 	line-height: 1.4;
 	margin:      10% auto;
 }
