--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,10 @@
   <head>
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/normalize.css" />
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" />
+      {% include meta.html %}
   </head>
   <body>
+     {% include head.html %}
      {{ content }}
     <hr/>
      {% include footer.html %}
