--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <h1>{{ page.title }}</h1>
   <p>Written by {{ page.author }} on {{ page.date | date: "%d.%m.%Y" }}. Tagged as 
     {% for tag in page.tags %}
-      <a href="{{ site.baseurl }}/notes/tag/{{ tag }}">#{{ tag }}</a>&nbsp;
+      <a href="{{ site.baseurl }}/notes/tag/{{ tag | downcase }}">#{{ tag }}</a>&nbsp;
     {% endfor %}
   </p>
 
