--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,8 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
-  <p>Written by {{ page.author }} on {{ page.date | date: "%d.%m.%Y" }}. Tagged as 
+  {% assign author = site.authors | where: 'name', page.author | first%}
+  <p>Written by <a href="{{ author.url }}">{{ page.author }}</a> on {{ page.date | date: "%d.%m.%Y" }}. Tagged as 
     {% for tag in page.tags %}
       <a href="{{ site.baseurl }}/notes/tag/{{ tag | downcase }}">#{{ tag }}</a>&nbsp;
     {% endfor %}
@@ -13,5 +14,4 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
-
 </article>
