changed table css

--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -1,5 +1,5 @@
   <tr>
-  <td class="date" width="15%">
+  <td class="date">
     <span class="post-date">{{ post.date | date: "%d.%m.%Y" }}</span>
   </td>
   <td>
