--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -110,6 +110,7 @@ pre {
 
 td.date, .date {
 	font:        1em roboto-mono, monospace;
+	padding-right: 10px;
 }
 pre, code, tt {
 	font:        1em roboto-mono, monospace;
