--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -42,7 +42,7 @@ del { color: #666; }
 
 pre { margin: 1.5em 0; white-space: pre; }
 
-td.date, .date { font: 1em roboto-mono, monospace; }
+td.date, .date { font: 1em roboto-mono, monospace; padding-right: 10px; }
 
 pre, code, tt { font: 1em roboto-mono, monospace; line-height: 1.5; }
 
