--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,1 @@
-<a href="{{ site.url }}"><img src="{{ site.baseurl }}/assets/images/logo.svg" width="60px"></a>
+<a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/assets/images/logo.svg" width="60px"></a>
