--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,1 @@
-<a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/assets/images/logo.svg" width="60px"></a>
+<a href="{{ "/index" | relative_url }}"><img src="{{ "/assets/images/logo.svg" | relative_url }}" width="60px"></a>
