--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <p>
     Copyright © 2008 - 2019 Mathscapes Research. All rights reserved unless stated otherwise.<br/>
     <a href="{{ site.url }}/about" style="padding-right: 10px;">About</a>
-    <a href="mailto: hello@mathscapes.xyz">Contact</a>
+    <a href="mailto: hello@mathscapes.xyz" style="padding-right: 10px;">Email</a>
+    <a href="https://github.com/mathscapes" style="padding-right: 10px;">GitHub</a>
+    <a href="https://twitter.com/mathscapes" style="padding-right: 10px;">Twitter</a>
 </p>
