--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -82,7 +82,12 @@ a:focus, a:hover {
 }
 
 a {
-	color:           #1155cc;
+	color:           #000;
+	text-decoration: underline;
+}
+
+a:hover {
+	color:#666;
 	text-decoration: underline;
 }
 
