--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -30,7 +30,9 @@ p { margin: 0 0 1.5em; }
 
 a:focus, a:hover { color: #09f; }
 
-a { color: #1155cc; text-decoration: underline; }
+a { color: #000; text-decoration: underline; }
+
+a:hover { color: #666; text-decoration: underline; }
 
 blockquote { margin: 1.5em; color: #666; }
 
