update date format

--- a/_includes/post_preview.html
+++ b/_includes/post_preview.html
@@ -1,6 +1,6 @@
   <tr>
   <td class="date">
-    <span class="post-date">{{ post.date | date: "%d.%m.%Y" }}</span>
+    <span class="post-date">{{ post.date | date: "%d.%m.%y" }}</span>
   </td>
   <td>
   <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></td>
