--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -147,9 +147,10 @@ figure {
 }
 
 figcaption {
-	font-size:     0.75em;
-	padding:       0.5em 2em;
-	margin-bottom: 2em;
+	font-size: 0.75em;
+	margin-top: -1em;
+	margin-bottom:2em;
+	text-align: center;
 }
 
 figure img {
