--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -58,7 +58,7 @@ ol { list-style-type: decimal; }
 
 figure { margin: 1.5em 0; width: 100%; text-align: center; }
 
-figcaption { font-size: 0.75em; padding: 0.5em 2em; margin-bottom: 2em; }
+figcaption { font-size: 0.75em; margin-top: -1em; margin-bottom: 2em; text-align: center; }
 
 figure img { margin-bottom: 0px; }
 
