--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,10 @@
-<p>
-    Copyright © 2008 - 2019 Mathscapes Research. All rights reserved unless stated otherwise.<br/>
+<div style="margin-bottom:1em;">
     <a href="{{ site.url }}/about" style="padding-right: 10px;">About</a>
     <a href="mailto: hello@mathscapes.xyz" style="padding-right: 10px;">Email</a>
     <a href="https://github.com/mathscapes" style="padding-right: 10px;">GitHub</a>
-    <a href="https://twitter.com/mathscapes" style="padding-right: 10px;">Twitter</a>
-</p>
+    <a href="https://twitter.com/mathscapes" style="padding-right: 10px;">Twitter</a> 
+</div>
+<div>
+    Copyright © 2008 - 2019 Mathscapes Research and its contributers.<br/>
+    Built with <a href="https://jekyllrb.com">Jekyll</a> and hosted on <a href="https://github.com">Github</a>.<br/>
+</div>
