--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,1 @@
-<a href="{{ "/" | relative_url }}"><img src="{{ "/assets/images/logo.svg" | relative_url }}" width="60px"></a>
+<a href="{{ "/" | relative_url }}"><img class="logo" src="{{ "/assets/images/logo.svg" | relative_url }}" width="60px"></a>
