--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -54,7 +54,7 @@ li ul, li ol { margin: 0; }
 
 ul, ol { margin: 0 3em 1.5em 1.5em; padding-left: 1.5em; }
 
-ul { list-style-type: disc; }
+ul { list-style-type: square; }
 
 ol { list-style-type: decimal; }
 
