--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,10 @@
   </head>
   <body>
      {% include head.html %}
-     {{ content }}
-    <hr/>
-     {% include footer.html %}
+      <div class="container">
+        {{ content }}
+        <hr/>
+        {% include footer.html %}
+      </div>
   </body>
 </html>
