--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1>{{ page.name }}</h1>
-<p>{{ page.position }}</p>
+<div class="meta">{{ page.position }}</div>
 
 {{ content }}
 
