--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,11 +5,11 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
   {% assign author = site.authors | where: 'name', page.author | first%}
-  <p><ion-icon name="contact"></ion-icon> Written by <a href="{{ author.url }}">{{ page.author }}</a> &nbsp; <ion-icon name="calendar"></ion-icon> Posted on {{ page.date | date: "%d.%m.%Y" }} <br/> <ion-icon name="pricetags"></ion-icon> Tagged as  
+  <div class="meta"><ion-icon name="contact"></ion-icon> Written by <a href="{{ author.url }}">{{ page.author }}</a> &nbsp; <ion-icon name="calendar"></ion-icon> Posted on {{ page.date | date: "%d.%m.%Y" }} <br/> <ion-icon name="pricetags"></ion-icon> Tagged as  
     {% for tag in page.tags %}
       <a href="{{ site.baseurl }}/notes/tag/{{ tag | downcase }}">#{{ tag }}</a>&nbsp;
     {% endfor %}
-  </p>
+  </div>
 
   <div class="entry">
     {{ content }}
