--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/normalize.css" />
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
       {% include meta.html %}
   </head>
   <body>
