--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,10 +17,12 @@ img {
 
 }
 body {
-	font-size:   14px;
+	font-size:   16px;
 	color:      #000;
-	background:  #fff;
-	font-family: neue-haas-grotesk-text, sans-serif;
+	background: rgb(255,255,255);
+	//font-family: neue-haas-grotesk-text, sans-serif;
+	font-family: source-serif-pro, serif;
+
 	line-height: 1.4;
 	margin: 0;
 }
@@ -40,6 +42,7 @@ h2.home a:hover{
 }
 
 h1, h2, h3, h4, h5, h6 {
+	font-family: neue-haas-grotesk-text, sans-serif;
 	font-weight: normal;
 	color:       #000;
 	margin-bottom: 0.5em;
@@ -48,9 +51,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+	font-family: source-serif-pro, serif;
 	font-size:   18pt;
 	font-weight: 400;
-	max-width: 600px;
+	max-width: 650px;
 }
 
 h2 {
@@ -105,6 +109,7 @@ a:hover {
 }
 
 blockquote {
+	font-style: italic;
 	margin: 1.5em;
 	color:  #000;
 }
@@ -166,6 +171,10 @@ figcaption {
 	margin-top: -1em;
 	margin-bottom:2em;
 	text-align: center;
+	font-family: neue-haas-grotesk-text, sans-serif;
+	max-width: 560px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 figure img {
@@ -174,7 +183,7 @@ figure img {
 
 hr {
 	border:        0px;
-	border-top:    2px solid #ddd;
+	border-top:    1px solid #ddd;
 	//border-bottom: 1px solid #fff;
 	margin-top:    4em;
 	margin-bottom: 2em;
@@ -209,13 +218,13 @@ li {
 /* Code Highlighting */
 
 code {
-	font-family: 'Menlo', monospace;
+	font: 1em roboto-mono, monospace;
 	font-size:   10.5pt;
 }
 
 p > code {
 	padding:    0.2em 0.4em;
-	background: #eee;
+	//background: #eee;
 }
 
 pre {
@@ -368,7 +377,9 @@ ion-icon{
 	margin-bottom: -2px;
 	color: maroon; 
 }
-
+a.primary-btn, a.btn{
+	font-family: neue-haas-grotesk-text, sans-serif;
+}
 a.primary-btn {
 	-webkit-border-radius: 3;
 	-moz-border-radius: 3;
@@ -380,14 +391,14 @@ a.primary-btn {
 	display: inline-block;
 	margin-top: 1em;
 	text-decoration: none;
-	border: 2px solid #800000;
+	border: 1px solid #800000;
 	margin-left: 0.5em;
 	margin-right: 0.5em;
 }
   
 a.primary-btn:hover {
 	background: #570000;
-	border: 2px solid #570000;
+	border: 1px solid #570000;
 	text-decoration: none;
 }
 
@@ -398,7 +409,7 @@ a.btn {
 	color: #800000;
 	font-size: 16px;
 	background: white;
-	border: 2px solid #800000;
+	border: 1px solid #800000;
 	padding: 10px 20px 10px 20px;
 	display: inline-block;
 	margin-top: 1em;
@@ -409,7 +420,7 @@ a.btn {
   
 a.btn:hover {
 	background: #570000;
-	border: 2px solid #570000;
+	border: 1px solid #570000;
 	color: white;
 	text-decoration: none;
 }
@@ -419,6 +430,7 @@ p.tertiary{
 	margin-top:20px; 
 	color: #444;
 	font-size: 12px;
+	font-family: neue-haas-grotesk-text, sans-serif;
 }
 div.meta{
 	margin-bottom:20px;
@@ -427,7 +439,7 @@ div.meta{
 	.logo {
 		display: block;
 		margin: 0 auto;
-		width: 3.5em;
+		width: 50px;
 	}
 	a.primary-btn, a.btn {
 		display: block !important;
