--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -161,3 +161,5 @@ div.meta { margin-bottom: 20px; }
   hr { margin-top: 2em; margin-bottom: 1em; }
   div.meta { text-align: center; }
   img { max-width: 100% !important; } }
+
+/*# sourceMappingURL=style.css.map */
