--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -480,3 +480,15 @@ div.meta{
 		margin:0 auto;
 	}
 }
+
+blockquote span.source {
+	font-size: 0.75em;
+	margin-right: 2em;
+	margin-top: 1em;
+	margin-bottom:2em;
+	font-family: neue-haas-grotesk-text, sans-serif;
+	font-style: normal;
+	display: block;
+	color: grey;
+	text-align:right;
+}
