--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -163,4 +163,6 @@ div.meta { margin-bottom: 20px; }
   img { max-width: 100% !important; }
   div.container { margin: 0 auto; } }
 
+blockquote span.source { font-size: 0.75em; margin-right: 2em; margin-top: 1em; margin-bottom: 2em; font-family: neue-haas-grotesk-text, sans-serif; font-style: normal; display: block; color: grey; text-align: right; }
+
 /*# sourceMappingURL=style.css.map */
