--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -155,7 +155,7 @@ div.meta { margin-bottom: 20px; }
 @media only screen and (max-width: 800px) { .logo { display: block; margin: 0 auto; width: 50px; }
   a.primary-btn, a.btn { display: block !important; width: 100%; padding-left: 0px; padding-right: 0px; margin-left: 0px; margin-right: 0px; margin-bottom: 0px; font-size: 14px; text-align: center; }
   body { margin: 20px; font-size: 12px; }
-  h1 { font-size: 16px; text-align: center; }
+  h1 { font-size: 16px; text-align: center; max-width: 100%; }
   h2, h3, h4, h5, h6 { font-size: 14px; }
   p.tertiary { margin-top: 0px; }
   hr { margin-top: 2em; margin-bottom: 1em; }
