--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -4,9 +4,9 @@
 
 img { max-width: 100%; display: block; margin-left: auto; margin-right: auto; }
 
-body { font-size: 16px; color: #000; background: white; font-family: source-serif-pro, serif; line-height: 1.4; margin: 0; }
+body { font-size: 16px; color: #000; background: white; font-family: source-serif-pro, serif; line-height: 1.4; margin: 0; text-rendering: optimizeLegibility !important; -webkit-font-smoothing: antialiased !important; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004); -moz-osx-font-smoothing: grayscale !important; }
 
-div.container { margin: 5% auto; max-width: 760px; }
+div.container { margin: 5% auto; max-width: 700px; }
 
 h2.home a { text-decoration: none; color: #000; }
 
@@ -140,19 +140,21 @@ ion-icon { margin-bottom: -2px; color: maroon; }
 
 a.primary-btn, a.btn { font-family: neue-haas-grotesk-text, sans-serif; }
 
-a.primary-btn { -webkit-border-radius: 3; -moz-border-radius: 3; border-radius: 3px; color: #ffffff; font-size: 16px; background: #800000; padding: 10px 20px 10px 20px; display: inline-block; margin-top: 1em; text-decoration: none; border: 1px solid #800000; margin-left: 0.5em; margin-right: 0.5em; }
+a.primary-btn { -webkit-border-radius: 3; -moz-border-radius: 3; border-radius: 3px; color: #ffffff; font-size: 16px; background-color: #800000; padding: 10px 20px 10px 20px; display: inline-block; margin-top: 1em; text-decoration: none; border: 1px solid #800000; margin-left: 0.5em; margin-right: 0.5em; box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15); }
 
-a.primary-btn:hover { background: #570000; border: 1px solid #570000; text-decoration: none; }
+a.primary-btn:hover { background-color: #570000; border: 1px solid #570000; text-decoration: none; box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15); }
 
-a.btn { -webkit-border-radius: 3; -moz-border-radius: 3; border-radius: 3px; color: #800000; font-size: 16px; background: white; border: 1px solid #800000; padding: 10px 20px 10px 20px; display: inline-block; margin-top: 1em; text-decoration: none; margin-left: 0.5em; margin-right: 0.5em; }
+a.btn { -webkit-border-radius: 3; -moz-border-radius: 3; border-radius: 3px; color: #800000; font-size: 16px; background-color: white; border: 1px solid #800000; padding: 10px 20px 10px 20px; display: inline-block; margin-top: 1em; text-decoration: none; margin-left: 0.5em; margin-right: 0.5em; box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15); }
 
-a.btn:hover { background: #570000; border: 1px solid #570000; color: white; text-decoration: none; }
+a.btn:hover { background-color: #570000; border: 1px solid #570000; color: white; text-decoration: none; box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15); }
 
 p.tertiary { max-width: 400px; margin-top: 20px; color: #444; font-size: 12px; font-family: neue-haas-grotesk-text, sans-serif; }
 
 div.meta { margin-bottom: 20px; }
 
-@media only screen and (max-width: 800px) { .logo { display: block; margin: 0 auto; width: 50px; }
+.dropcap { color: maroon; float: left; font-size: 75px; line-height: 60px; padding-top: 4px; padding-right: 8px; padding-left: 3px; }
+
+@media only screen and (max-width: 740px) { .logo { display: block; margin: 0 auto; width: 50px; }
   a.primary-btn, a.btn { display: block !important; width: 100%; padding-left: 0px; padding-right: 0px; margin-left: 0px; margin-right: 0px; margin-bottom: 0px; font-size: 14px; text-align: center; }
   body { margin: 20px; font-size: 12px; }
   h1 { font-size: 16px; text-align: center; max-width: 100%; }
@@ -161,7 +163,8 @@ div.meta { margin-bottom: 20px; }
   hr { margin-top: 2em; margin-bottom: 1em; }
   div.meta { text-align: center; }
   img { max-width: 100% !important; }
-  div.container { margin: 0 auto; } }
+  div.container { margin: 0 auto; }
+  .dropcap { color: maroon; float: left; font-size: 55px; line-height: 40px; padding-top: 4px; padding-right: 8px; padding-left: 3px; } }
 
 blockquote span.source { font-size: 0.75em; margin-right: 2em; margin-top: 1em; margin-bottom: 2em; font-family: neue-haas-grotesk-text, sans-serif; font-style: normal; display: block; color: grey; text-align: right; }
 
