fixed date font

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -136,7 +136,7 @@ pre {
 }
 
 td.date, .date {
-	font: 1em roboto-mono, monospace;
+	//font: 1em roboto-mono, monospace;
 	width: 10%;
 	padding-right: 10px;
 	color: #000;
