--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -46,7 +46,7 @@ del { color: #666; }
 
 pre { margin: 1.5em 0; white-space: pre; }
 
-td.date, .date { font: 1em roboto-mono, monospace; width: 10%; padding-right: 10px; color: #000; }
+td.date, .date { width: 10%; padding-right: 10px; color: #000; }
 
 pre, code, tt { font: 1em roboto-mono, monospace; line-height: 1.5; }
 
