--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
 
   {% if page.cite %}
     <h4><ion-icon name="quote"></ion-icon> Cite as</h4>
-    <p>{{ page.author }} ({{ page.date | date: "%Y, %B %d" }}). <i>{{ page.title }}</i>. Retrieved <span id="today"></span>, from https://mathscapes.xyz{{ page.url }}. </p>
+    <p>{{ page.author }} ({{ page.date | date: "%Y, %B %d" }}). <i>{{ page.title }}</i>. Retrieved <span id="today"></span>, from <a href="{{ page.url | relative_url }}">https://mathscapes.xyz{{ page.url }}</a>. </p>
   {% endif %}
 </article>
 
