--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>Tagged as #{{ page.title }}</h1>
+<h1>Tagged as <i>{{ page.title }}</i></h1>
 
 <div class="posts">
     <table width="100%">
