--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   {% assign author = site.authors | where: 'name', page.author | first%}
   <div class="meta"><ion-icon name="contact"></ion-icon> Written by <a href="{{ author.url }}">{{ page.author }}</a> &nbsp; <ion-icon name="calendar"></ion-icon> Posted on {{ page.date | date: "%d.%m.%Y" }} <br/> <ion-icon name="pricetags"></ion-icon> Tagged as  
     {% for tag in page.tags %}
-      <a href="{{ site.baseurl }}/notes/tag/{{ tag | downcase }}">#{{ tag }}</a>&nbsp;
+      <a class="tag" href="{{ site.baseurl }}/notes/tag/{{ tag | downcase | replace: ' ', '-' }}">{{ tag }}</a>&nbsp;
     {% endfor %}
   </div>
 
