--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -457,6 +457,28 @@ div.meta{
 	padding-left: 3px;
   }
 
+  a.tag {
+	font-family: neue-haas-grotesk-text, sans-serif;
+	font-size: 12px;
+	text-transform: uppercase;
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	margin-bottom: 4px;
+	margin-top: 4px;
+	border: 1px solid maroon;
+	display: inline-block;
+	color: maroon;
+}
+
+a.tag:hover{
+	background-color: maroon;
+	border: 1px solid maroon;
+	color: white;
+	text-decoration: none;
+}
+
 @media only screen and (max-width: 740px) {
 	.logo {
 		display: block;
@@ -510,6 +532,9 @@ div.meta{
 		padding-top: 4px;
 		padding-right: 8px;
 		padding-left: 3px;
+	}
+	a.tag{
+		font-size: 10px;
 	}
 }
 
