--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -154,6 +154,10 @@ div.meta { margin-bottom: 20px; }
 
 .dropcap { color: maroon; float: left; font-size: 75px; line-height: 60px; padding-top: 4px; padding-right: 8px; padding-left: 3px; }
 
+a.tag { font-family: neue-haas-grotesk-text, sans-serif; font-size: 12px; text-transform: uppercase; padding-left: 5px; padding-right: 5px; padding-top: 2px; padding-bottom: 2px; margin-bottom: 4px; margin-top: 4px; border: 1px solid maroon; display: inline-block; color: maroon; }
+
+a.tag:hover { background-color: maroon; border: 1px solid maroon; color: white; text-decoration: none; }
+
 @media only screen and (max-width: 740px) { .logo { display: block; margin: 0 auto; width: 50px; }
   a.primary-btn, a.btn { display: block !important; width: 100%; padding-left: 0px; padding-right: 0px; margin-left: 0px; margin-right: 0px; margin-bottom: 0px; font-size: 14px; text-align: center; }
   body { margin: 20px; font-size: 12px; }
@@ -164,7 +168,8 @@ div.meta { margin-bottom: 20px; }
   div.meta { text-align: center; }
   img { max-width: 100% !important; }
   div.container { margin: 0 auto; }
-  .dropcap { color: maroon; float: left; font-size: 55px; line-height: 40px; padding-top: 4px; padding-right: 8px; padding-left: 3px; } }
+  .dropcap { color: maroon; float: left; font-size: 55px; line-height: 40px; padding-top: 4px; padding-right: 8px; padding-left: 3px; }
+  a.tag { font-size: 10px; } }
 
 blockquote span.source { font-size: 0.75em; margin-right: 2em; margin-top: 1em; margin-bottom: 2em; font-family: neue-haas-grotesk-text, sans-serif; font-style: normal; display: block; color: grey; text-align: right; }
 
