--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -140,11 +140,11 @@ ion-icon { margin-bottom: -2px; color: maroon; }
 
 a.primary-btn, a.btn { font-family: neue-haas-grotesk-text, sans-serif; }
 
-a.primary-btn { -webkit-border-radius: 3; -moz-border-radius: 3; border-radius: 3px; color: #ffffff; font-size: 16px; background-color: #800000; border: 1px solid #570000; padding: 10px 20px 10px 20px; display: inline-block; margin-top: 1em; text-decoration: none; margin-left: 0.5em; margin-right: 0.5em; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3); }
+a.primary-btn { color: #ffffff; font-size: 16px; background-color: #800000; border: 1px solid #570000; padding: 10px 20px 10px 20px; display: inline-block; margin-top: 1em; text-decoration: none; margin-left: 0.5em; margin-right: 0.5em; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3); }
 
 a.primary-btn:hover { background-color: #570000; border: 1px solid #000000; text-decoration: none; box-shadow: 0 0px 0px rgba(0, 0, 0, 0.15); transition: background-color 2s ease; }
 
-a.btn { -webkit-border-radius: 3; -moz-border-radius: 3; border-radius: 3px; color: #333333; font-size: 16px; background-color: #eeeeee; border: 1px solid #cccccc; padding: 10px 20px 10px 20px; display: inline-block; margin-top: 1em; text-decoration: none; margin-left: 0.5em; margin-right: 0.5em; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
+a.btn { color: #333333; font-size: 16px; background-color: #eeeeee; border: 1px solid #cccccc; padding: 10px 20px 10px 20px; display: inline-block; margin-top: 1em; text-decoration: none; margin-left: 0.5em; margin-right: 0.5em; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
 
 a.btn:hover { background-color: #ffffff; border: 1px solid #aaaaaa; color: black; text-decoration: none; box-shadow: 0 0px 0px rgba(0, 0, 0, 0.15); transition: background-color 2s ease; }
 
@@ -154,7 +154,7 @@ div.meta { margin-bottom: 20px; }
 
 .dropcap { color: maroon; float: left; font-size: 75px; line-height: 60px; padding-top: 4px; padding-right: 8px; padding-left: 3px; }
 
-a.tag { font-family: neue-haas-grotesk-text, sans-serif; font-size: 12px; text-transform: uppercase; padding-left: 5px; padding-right: 5px; padding-top: 2px; padding-bottom: 2px; margin-bottom: 4px; margin-top: 4px; border: 1px solid maroon; display: inline-block; color: maroon; }
+a.tag { font-family: neue-haas-grotesk-text, sans-serif; font-size: 12px; text-transform: uppercase; padding-left: 5px; padding-right: 5px; padding-top: 2px; padding-bottom: 2px; margin-bottom: 0px; margin-top: 4px; border: 1px solid maroon; display: inline-block; color: maroon; }
 
 a.tag:hover { background-color: maroon; border: 1px solid maroon; color: white; text-decoration: none; }
 
