--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -12,9 +12,9 @@ h2.home a { text-decoration: none; color: #000; }
 
 h2.home a:hover { text-decoration-line: underline; }
 
-h1, h2, h3, h4, h5, h6 { font-family: neue-haas-grotesk-text, sans-serif; font-weight: normal; color: #000; margin-bottom: 0.5em; padding-top: 1em; line-height: 1.3; }
+h1, h2, h3, h4, h5, h6 { font-family: neue-haas-grotesk-text, sans-serif; font-weight: normal; color: #000; margin-bottom: 0.5em; padding-top: 1em; line-height: 1.3; max-width: 550px; }
 
-h1 { font-family: source-serif-pro, serif; font-size: 18pt; font-weight: 400; max-width: 650px; }
+h1 { font-family: source-serif-pro, serif; font-size: 20pt; font-weight: 400; }
 
 h2 { font-size: 16pt; color: maroon; }
 
