added text selection color

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -549,3 +549,10 @@ blockquote span.source {
 
 }
 
+::-moz-selection { /* Code for Firefox */
+	background: yellow;
+  }
+  
+  ::selection {
+	background: yellow;
+  }
