--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -177,4 +177,8 @@ a.tag:hover .count { color: white; }
 
 blockquote span.source { font-size: 0.75em; margin-right: 2em; margin-top: 1em; margin-bottom: 2em; font-family: neue-haas-grotesk-text, sans-serif; font-style: normal; display: block; color: grey; text-align: right; }
 
+::-moz-selection { /* Code for Firefox */ background: yellow; }
+
+::selection { background: yellow; }
+
 /*# sourceMappingURL=style.css.map */
