--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@ img {
 
 }
 body {
-	font-size:   16px;
+	font-size:   18px;
 	color:      #000;
 	background: rgb(255,255,255);
 	//font-family: neue-haas-grotesk-text, sans-serif;
@@ -33,7 +33,7 @@ body {
 
 div.container{
 	margin: 5% auto;
-	max-width: 700px;
+	max-width: 800px;
 }
 
 h2.home a{
@@ -52,12 +52,12 @@ h1, h2, h3, h4, h5, h6 {
 	margin-bottom: 0.5em;
 	padding-top:    1em;
 	line-height:   1.3;
-	max-width: 550px;
+	//max-width: 550px;
 }
 
 h1 {
 	font-family: source-serif-pro, serif;
-	font-size:   20pt;
+	font-size:   24pt;
 	font-weight: 400;
 	
 }
@@ -441,9 +441,9 @@ div.meta{
 .dropcap {
 	color: maroon;
 	float: left;
-	font-size: 75px;
-	line-height: 60px;
-	padding-top: 4px;
+	font-size: 55px;
+	line-height: 40px;
+	padding-top: 6px;
 	padding-right: 8px;
 	padding-left: 3px;
   }
