--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -4,17 +4,17 @@
 
 img { max-width: 100%; display: block; margin-left: auto; margin-right: auto; }
 
-body { font-size: 16px; color: #000; background: white; font-family: source-serif-pro, serif; line-height: 1.4; margin: 0; text-rendering: optimizeLegibility !important; -webkit-font-smoothing: antialiased !important; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004); -moz-osx-font-smoothing: grayscale !important; }
+body { font-size: 18px; color: #000; background: white; font-family: source-serif-pro, serif; line-height: 1.4; margin: 0; text-rendering: optimizeLegibility !important; -webkit-font-smoothing: antialiased !important; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004); -moz-osx-font-smoothing: grayscale !important; }
 
-div.container { margin: 5% auto; max-width: 700px; }
+div.container { margin: 5% auto; max-width: 800px; }
 
 h2.home a { text-decoration: none; color: #000; }
 
 h2.home a:hover { text-decoration-line: underline; }
 
-h1, h2, h3, h4, h5, h6 { font-family: neue-haas-grotesk-text, sans-serif; font-weight: normal; color: #000; margin-bottom: 0.5em; padding-top: 1em; line-height: 1.3; max-width: 550px; }
+h1, h2, h3, h4, h5, h6 { font-family: neue-haas-grotesk-text, sans-serif; font-weight: normal; color: #000; margin-bottom: 0.5em; padding-top: 1em; line-height: 1.3; }
 
-h1 { font-family: source-serif-pro, serif; font-size: 20pt; font-weight: 400; }
+h1 { font-family: source-serif-pro, serif; font-size: 24pt; font-weight: 400; }
 
 h2 { font-size: 16pt; color: maroon; }
 
@@ -152,7 +152,7 @@ p.tertiary { max-width: 400px; margin-top: 20px; color: #444; font-size: 12px; f
 
 div.meta { margin-bottom: 20px; }
 
-.dropcap { color: maroon; float: left; font-size: 75px; line-height: 60px; padding-top: 4px; padding-right: 8px; padding-left: 3px; }
+.dropcap { color: maroon; float: left; font-size: 55px; line-height: 40px; padding-top: 6px; padding-right: 8px; padding-left: 3px; }
 
 a.tag { font-family: neue-haas-grotesk-text, sans-serif; font-size: 12px; text-transform: uppercase; padding-left: 5px; padding-right: 5px; padding-top: 2px; padding-bottom: 2px; margin-bottom: 0px; margin-top: 4px; border: 1px solid maroon; display: inline-block; color: maroon; }
 
